# Image_Processing

./: .lck  .properties  .script  3D_disparity.py  3d_Disparity.cpp  CMakeLists.txt  Dense_optical_flow.py  Edge.py  First_program.cpp  HelloWorld.py  Image_write.py  LK_optical_flow.py  MeanShift.py  Readme  Shape_Algo.py  Shape_detect.py  StereoTuner.py  Template_matching.py  Track_object.py  Tracking.py  background_subtraction.py  ball_tracker.py  binarization.py  blue_detect.py  distance_triangle.py  face_detect.py  histograms.py  image.py  image_1.py  image_processing.py  line_following.py  mymath.py  stereo_match.py  trial.py  trial.spec  trial2.py  video.py  video_1.py  visual_instructions.py
Algae_detection/: Algae_detection.py
Track_object/: Track_object.spec
cameracaliberation/: 3D_disparity.py  camera_caliberation.py  capture_images.py
face/: face_detect.spec
pot_holes_hist/: 11.eps  12.eps  21.eps  22.eps  31.eps  32.eps  41.eps  42.eps  51.eps  52.eps  61.eps  62.eps
